--- a/src/components/Donation.astro
+++ b/src/components/Donation.astro
@@ -23,7 +23,7 @@
           <div class="mb-8 text-center">
             <div class="bg-white p-4 rounded-lg inline-block mb-4">
               <img
-                src="/images/qr-donation.png"
+                src="/images/qr-donation.svg"
                 alt="QR Code para donaciones"
                 class="w-32 h-32 mx-auto"
               />
