--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,7 +18,7 @@ const currentPath = Astro.url.pathname;
       <div class="flex-shrink-0 flex items-center">
         <a href="/" class="flex items-center space-x-3">
           <img
-            src="/images/logo-educa.png"
+            src="/images/logo-educa.svg"
             alt="Instituto EDUCA"
             class="h-12 w-auto"
           />
