--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -4,19 +4,19 @@ const testimonials = [
     name: "Carmen Hortencia Najarro Febres",
     role: "Educadora",
     content: "Mi agradecimiento eterno al Instituto EDUCA, son parte de mi vida profesional desde el año 1999, una familia que me permitió crecer, preparándome a través de talleres que luego hice réplica en diversos contextos en el distrito de San Juan de Lurigancho, Callao, Huancavelica, UGEL 05 y UGEL 06 en mi desempeño laboral.",
-    image: "/images/testimonial-1.jpg"
+    image: "/images/testimonial-1.svg"
   },
   {
     name: "Roque Blas Del Villar Gálvez",
     role: "Director de I.E.",
     content: "Educa, a través de sus talleres de capacitación, me impulsó a desplegar la responsabilidad social en mi desempeño dentro y fuera de la escuela desde la reflexión de la práctica pedagógica, a trabajar en equipo con los dirigentes de la comunidad y en redes educativas para atender las demandas del contexto local.",
-    image: "/images/testimonial-2.jpg"
+    image: "/images/testimonial-2.svg"
   },
   {
     name: "Astrid Mendoza Mejía",
     role: "Maestra",
     content: "A lo largo de los años dedicados a la educación, he invertido con más fuerza, mis capacidades y competencias en el sector público; habiendo recibido el aporte sostenido durante varios años del Instituto EDUCA a través de talleres y cursos de capacitación en liderazgo, habilidades sociales con énfasis en manejo pedagógico.",
-    image: "/images/testimonial-3.jpg"
+    image: "/images/testimonial-3.svg"
   }
 ];
 ---
