--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@ const currentYear = new Date().getFullYear();
       <div class="col-span-1 md:col-span-2">
         <div class="flex items-center space-x-3 mb-4">
           <img
-            src="/images/logo-educa-white.png"
+            src="/images/logo-educa-white.svg"
             alt="Instituto EDUCA"
             class="h-10 w-auto"
           />
