--- a/src/pages/quienes-somos.astro
+++ b/src/pages/quienes-somos.astro
@@ -47,7 +47,7 @@ import Footer from '../components/Footer.astro';
           </div>
           <div class="relative">
             <img
-              src="/images/about-history.jpg"
+              src="/images/about-history.svg"
               alt="Historia del Instituto EDUCA"
               class="rounded-2xl shadow-2xl"
             />
